[mirotalsfu] - add stats endpoint
