# app/api/swagger.yaml
@@ -12,6 +12,24 @@ schemes:
     - http
 
 paths:
+    /stats:
+        get:
+            tags:
+                - 'stats'
+            summary: 'Get stats'
+            description: 'Get meetings'
+            produces:
+                - 'application/json'
+            security:
+                - secretApiKey: []
+            responses:
+                '200':
+                    description: 'Get Stats done'
+                    schema:
+                        $ref: '#/definitions/StatsResponse'
+                '403':
+                    description: 'Unauthorized!'
+
     /meetings:
         get:
             tags:
@@ -107,6 +125,13 @@ securityDefinitions:
         description: 'Format like this: authorization: {API_KEY_SECRET}'
 
 definitions:
+    StatsResponse:
+        type: object
+        properties:
+            meetings:
+                type: array
+                items:
+                    $ref: '#/definitions/Stats'
     MeetingsResponse:
         type: object
         properties:
@@ -193,6 +218,15 @@ definitions:
             browser:
                 type: string
 
+    Stats:
+        type: object
+        properties:
+            success:
+                type: boolean
+            totalRooms:
+                type: integer
+            totalUser:
+                type: integer
     Meeting:
         type: object
         properties:
